# sls-bamboo-time-off

./: .gitignore  Cargo.toml  Makefile  README.md  serverless.yml
data/: sample-bamboohr.json  sample-dynamodb-event.json
examples/: bulk-insert-mock-reqs.rs  list-dynamodb-tables.rs  send_slack_msg.rs
resources/: dynamodb-table.yaml
src/: alertdb.rs  bamboo.rs  format.rs  lib.rs
src/bamboo/: agent.rs  time_off_request.rs
