[package]
name = "sls-bamboo-time-off"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Marley"]

[dependencies]
aws-config = "0.46"
aws-sdk-dynamodb = "0.16"
aws_lambda_events = "0.6"
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "0.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.0", features = ["aws-sdk-dynamodb+0_16", "aws_lambda_events+0_6"] }
serde_json = "1.0"
slack-hook3 = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
